Fixed enrollment and other minor issues
